k8sprod/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wele-ui
  namespace: wele-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wele-ui
  template:
    metadata:
      labels:
        app: wele-ui
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: wele-ui
          image: weleprodacr-agefb9badrcqcsa8.azurecr.io/wele-ui:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
