k8sprod/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wele-ui
  namespace: wele-prod
spec:
  type: ClusterIP
  selector:
    app: wele-ui
  ports:
    - name: http
      port: 80
      targetPort: 8082
